--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#hero">الرئيسيه</a>
+                  <a class="nav-link " aria-current="page" href="#hero">الرئيسيه</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#about">من نحن</a>
@@ -190,7 +190,7 @@
     <div class="title text-center">
       <h3>تواصل معنا</h3>
   </div>
-    <div class="container">
+    <div>
 <div class="row">
   <div class="col-lg-4">
     <div class="item text-center">
