--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         <div class="whats-app col-md-12 ">
                           <h3> تواصل عبر الواتساب</h3>
                           <!-- WhatsApp Button -->
-                          <button class="btn btn-success" onclick="gtag_report_conversion('https://wa.me/+971502883664')">
+                          <button class="btn" style="background: linear-gradient(90deg,#58D68D, #32BEA4); color: white;" onclick="gtag_report_conversion('https://wa.me/+971502883664')">
                               <!-- WhatsApp Icon (SVG) -->
                               971502883664
                               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-whatsapp" viewBox="0 0 16 16">
