--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
               </div>
             </div>
         <div class="col-lg-6 col-md-12 ">
-        <div class="desc mt-sm-5">
+        <div class="desc mt-5">
             <h3 class="dott fw-bold mb-1">من نحن</h3>
             <p class="sub-title">متخصصون في مجال العمالة المنزلية</p>
             <p > مكتب براعة للعمالة المنزلية هو المكتب الرائد في المملكة العربية السعودية لتقديم خدمات نقل الكفالة للعمالة المنزلية، لتوفير خادمات للتنظيف المنزلي، ورعاية الأطفال وكبار السن، وخدمات الطبخ. 
@@ -110,7 +110,7 @@
                 ، ونلتزم بتقديم خدمات نقل الكفالة بأسعار مناسبة.</p>
         </div>
         <div class="btn mt-5">
-            <a class="contact " href=""> تواصل معنا</a>
+            <a class="contact " href="#contact"> تواصل معنا</a>
         </div>
         </div>
         
