--- a/index.html
+++ b/index.html
@@ -60,16 +60,19 @@
                         <div class="contact col-md-12 ">
                           <h3>اتصل الان</h3>
                             <p>
-                                <button class=" btn btn-success"> 971502883664
-                                  <i class="fa-solid fa-phone"></i>
-                                </button>
+                              <button class="btn" style="background: linear-gradient(90deg,#58D68D, #32BEA4); color: white;" onclick="gtag_report_conversion('tel:0543394499')">
+                                971502883664
+                                <svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" fill="white" class="bi bi-telephone" viewBox="0 0 16 16">
+                                   <path d="M3.654 1.328a.678.678 0 0 0-1.015-.063L1.605 2.3c-.483.484-.661 1.169-.45 1.77a17.6 17.6 0 0 0 4.168 6.608 17.6 17.6 0 0 0 6.608 4.168c.601.211 1.286.033 1.77-.45l1.034-1.034a.678.678 0 0 0-.063-1.015l-2.307-1.794a.68.68 0 0 0-.58-.122l-2.19.547a1.75 1.75 0 0 1-1.657-.459L5.482 8.062a1.75 1.75 0 0 1-.46-1.657l.548-2.19a.68.68 0 0 0-.122-.58zM1.884.511a1.745 1.745 0 0 1 2.612.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.68.68 0 0 0 .178.643l2.457 2.457a.68.68 0 0 0 .644.178l2.189-.547a1.75 1.75 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.6 18.6 0 0 1-7.01-4.42 18.6 18.6 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877z"></path>
+                                 </svg>
+                             </button>
                                 
                              </p>
                         </div>
                         <div class="whats-app col-md-12 ">
                           <h3> تواصل عبر الواتساب</h3>
                           <!-- WhatsApp Button -->
-                          <button class="btn btn-success" onclick="gtag_report_conversion('https://wa.me/+971502883664')">
+                          <button class="btn " style="background: linear-gradient(90deg,#58D68D, #32BEA4); color: white;" onclick="gtag_report_conversion('https://wa.me/+971502883664')">
                               <!-- WhatsApp Icon (SVG) -->
                               971502883664
                               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-whatsapp" viewBox="0 0 16 16">
@@ -305,8 +308,11 @@
       <script src="js/jquery-3.7.1.min.js"></script>
       <script src="js/main.js"></script>
       <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-S3VGSPPL2G"></script>
-<script>
+      <script async src="https://www.googletagmanager.com/gtm.js?id=GTM-T4ZS2TX2"></script>
+      <script>
+        <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T4ZS2TX2"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
