--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
     <link rel="icon" href="images/cleaning.png">
     <title>توفير عماله منزليه وخادمات للتنازل</title>
     <script async src="https://www.googletagmanager.com/gtm.js?id=GTM-T4ZS2TX2"></script>
+    <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-T4ZS2TX2');</script>
+  <!-- End Google Tag Manager -->
 
 </head>
 <body  data-bs-spy="scroll" data-bs-target="#navbar-example">
@@ -323,6 +330,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
   gtag('config', 'G-S3VGSPPL2G');
 </script>
-      
+      <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T4ZS2TX2"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
 </body>
 </html>
