--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
         </div>
         <div class="col-md-12">
             <div class="location">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m19!1m8!1m3!1d927843.3631055309!2d46.6752957!3d24.7135517!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x3e2f03890d489399%3A0xba974d1c98e79fd5!2z2KfZhNix2YrYp9i2INin2YTYs9i52YjYr9mK2KnigK0!3m2!1d24.7135517!2d46.6752957!5e0!3m2!1sen!2seg!4v1733432556798!5m2!1sen!2seg" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14944335.422949368!2d34.411723063110436!3d23.871194352409045!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x15e7b33fe7952a41%3A0x5960504bc21ab69b!2sSaudi%20Arabia!5e0!3m2!1sen!2seg!4v1734980589925!5m2!1sen!2seg" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
 
