--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <div class="row banner-text">
                     <div class="col-md-12">
                         <div class="title text-end ">
-                            <h1>مكتب خادمات للتنازل</h1>
+                            <h1>مكتب استقدام عماله منزليه</h1>
                            <div class="col-md-7">
                             <p>
                               نقدم خدمة توفير العمالة المنزلية، المدربة لكافة أعمال المنزل ، ورعاية الأطفال وكبار السن، وخدمات الطبخ في المملكه العربيه السعوديه
@@ -69,7 +69,7 @@
                           <h3>اتصل الان</h3>
                             <p>
                              <a target="_blank">
-                              <button class="btn" style="background: linear-gradient(90deg,#58D68D, #32BEA4); color: white;" onclick="gtag_report_conversion('tel:+0596443578')">
+                              <button class="btn" style="background: linear-gradient(90deg,#58D68D, #32BEA4); color: white;" onclick="gtag_report_conversion('tel:0596443578')">
                                 0596443578
                                 <svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" fill="white" class="bi bi-telephone" viewBox="0 0 16 16">
                                    <path d="M3.654 1.328a.678.678 0 0 0-1.015-.063L1.605 2.3c-.483.484-.661 1.169-.45 1.77a17.6 17.6 0 0 0 4.168 6.608 17.6 17.6 0 0 0 6.608 4.168c.601.211 1.286.033 1.77-.45l1.034-1.034a.678.678 0 0 0-.063-1.015l-2.307-1.794a.68.68 0 0 0-.58-.122l-2.19.547a1.75 1.75 0 0 1-1.657-.459L5.482 8.062a1.75 1.75 0 0 1-.46-1.657l.548-2.19a.68.68 0 0 0-.122-.58zM1.884.511a1.745 1.745 0 0 1 2.612.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.68.68 0 0 0 .178.643l2.457 2.457a.68.68 0 0 0 .644.178l2.189-.547a1.75 1.75 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.6 18.6 0 0 1-7.01-4.42 18.6 18.6 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877z"></path>
@@ -112,7 +112,7 @@
             </div>
         <div class="col-lg-8 col-md-12 ">
         <div class="desc mt-sm-5">
-            <h3 class="dott fw-bold mb-1">من نحن</h3>
+            <h3 class="dott fw-bold mb-1 mt-5">من نحن</h3>
             <p class="sub-title text-justify">نقدم خدمة توفير العمالة المنزلية، 
               المدربة لكافة أعمال المنزل ، ورعاية الأطفال وكبار السن، وخدمات الطبخ. يتمتع فريقنا بخبرة واسعة في اختيار أفضل الخادمات ، ونلتزم بتقديم خدمات نقل الكفالة بأسعار مناسبة، 
             نظمن (للعملائنا الكرام) مدة عمل لاتقل عن عامين ومسؤلين عن البنود التالية : 
