--- a/index.html
+++ b/index.html
@@ -383,10 +383,15 @@
       <script src="js/bootstrap.bundle.js"></script>
       <script src="js/jquery-3.7.1.min.js"></script>
       <script src="js/main.js"></script>
-      <!-- Google tag (gtag.js) -->
-     
-        <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T4ZS2TX2"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-11404644043">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+ 
+  gtag('config', 'AW-11404644043');
 </script>
       <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T4ZS2TX2"
